# x5-snapdragon-linux

./: .gitignore  README.md  copy-firmware.sh
device-download-mode-changer/: CMakeLists.txt  dms-change-device-download-mode.c  dms-change-device-download-mode.h  dms-set-download-mode.c  dms-set-download-mode.h  qmi-message.c  qmi-message.h  x5-change-download-mode.c
device-download-mode-changer/cmake/: FindQmiGlib.cmake
udev/: 99-hp-lt4120.rules
